output.txt
2024-02-12 03:35:47.874571: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1
Traceback (most recent call last):
  File "/home/luker/anaconda3/envs/trading_env/bin/bot", line 5, in <module>
    from bot.cli.bot import main
  File "/home/luker/anaconda3/envs/trading_env/lib/python3.8/site-packages/bot/__init__.py", line 15, in <module>
    from .bot import BoptimalTrader
  File "/home/luker/anaconda3/envs/trading_env/lib/python3.8/site-packages/bot/bot.py", line 9, in <module>
    from .sentiment import *
  File "/home/luker/anaconda3/envs/trading_env/lib/python3.8/site-packages/bot/sentiment.py", line 109
    parseTickerNews(['BTCUSD', 'ETHUSD', 5) # pylint: disable=no-value-for-parameter
                                          ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
